--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "router": "^1.3.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
